[package]
name = "ironwire"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.100"
